--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-pie": "^0.6.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.11",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^9.13.3",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
