--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/art": "^1.1.2",
     "@react-native-community/async-storage": "^1.7.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
@@ -17,6 +18,7 @@
     "react-native": "0.61.4",
     "react-native-chart-kit": "^4.1.0",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-fab-pie": "^1.0.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-pie": "^0.6.1",
     "react-native-reanimated": "^1.4.0",
