--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -184,6 +184,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation project(':react-native-datetimepicker')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
