--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean:build:android": "rm -rf android/app/build",
+    "prod:android": "npm run clean:build:android  && react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
   },
   "dependencies": {
     "@react-native-community/art": "^1.1.2",
     "@react-native-community/async-storage": "^1.7.0",
+    "@react-native-community/datetimepicker": "^2.1.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
@@ -19,7 +22,9 @@
     "react-native-chart-kit": "^4.1.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-fab-pie": "^1.0.0",
+    "react-native-fusioncharts": "^4.1.1",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-modal-datetime-picker": "^8.1.1",
     "react-native-pie": "^0.6.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.11",
@@ -27,6 +32,7 @@
     "react-native-svg": "^9.13.3",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.0.4",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
