--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@react-native-community/art": "^1.1.2",
-    "@react-native-community/async-storage": "^1.7.0",
+    "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/datetimepicker": "^2.1.0",
+    "axios": "^0.19.2",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
@@ -22,7 +23,6 @@
     "react-native-chart-kit": "^4.1.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-fab-pie": "^1.0.0",
-    "react-native-fusioncharts": "^4.1.1",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-modal-datetime-picker": "^8.1.1",
     "react-native-pie": "^0.6.1",
