--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^4.1.0",
+    "react-native-collapse-view": "^1.0.0",
+    "react-native-collapsible": "^1.5.1",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-elements": "^1.2.7",
     "react-native-fab-pie": "^1.0.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-modal-datetime-picker": "^8.1.1",
