--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prod:android": "npm run clean:build:android  && react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res"
   },
   "dependencies": {
+    "@99xt/first-born": "^1.1.8",
     "@react-native-community/art": "^1.1.2",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/datetimepicker": "^2.1.0",
@@ -35,6 +36,7 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^9.13.3",
     "react-native-table-component": "^1.2.1",
+    "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
